--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Website professor-rafael</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="icon.png">
+  <link rel="icon" href="microfone.png">
   <link rel="stylesheet" href="responsive.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -23,12 +23,12 @@
 
   ::-webkit-scrollbar-track 
   {
-      background: #001aff;
+      background: #880404;
   }
 
   ::-webkit-scrollbar-thumb 
   {
-      background: #01021a;
+      background: #4e1028;
       border-radius: 12-0px;
   }
 
@@ -58,9 +58,9 @@
 
       <section class="hero" id="hero">
         <div class="hero__content container">
-          <h3>Olá, sejam bem vindos a @rasinformatica</h3>
-          <h1 class="hero__title"> <span> Professor Programador</span></h1>
-          <p>Trabalho com atualização de drives, Software, formatação, modificação de bios de notebook e pc.</p>
+          <h3>Olá, sejam bem vindos ao meu mundinho</h3>
+          <h1 class="hero__title"> <span> Estudante, cantora, designer gráfica, escritora e intercambista</span></h1>
+          <p>Canto em eventos públicos, casamentos, crio designs de convites, publis e posts, amo escrever .</p>
           <a href="#proyects" class="hero__btn btn">Portfolio</a>
 
           <div class="social-media social-media--hero">
@@ -71,7 +71,7 @@
               <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ"><i class="fa-brands fa-square-youtube"></i></a>
             </div>
             <div class="social-media__icon">
-              <a href="https://github.com/professor-rafael"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
             </div>
           </div>
         </div>
