--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Website professor-rafael</title>
+  <title>Portfolio Website Giovanna-Bochenski</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="microfone.png">
   <link rel="stylesheet" href="responsive.css">
@@ -42,7 +42,7 @@
      <header class="header" id="header">
       <nav class="nav">
         <div class="nav__content container">
-          <a href="#" class="nav__logo"><span> Rafael</span></a>
+          <a href="#" class="nav__logo"><span> Giovanna-Bochenski</span></a>
           <ul class="nav__links">
             <li class="nav__link"><a href="#header">Pagina inicial</a></li>
             <li class="nav__link"><a href="#services">Serviços</a></li>
@@ -88,20 +88,32 @@
           <div class="services__cards">
             <div class="services__card">
               <i class="services__card-icon fa-solid fa-code"></i>
-              <h3 class="services__card-title">Back End</h3>
-              <p class="services__card-description"> Gosto de construir a estrutura lógica e funcional de uma web-site.</p>
+              <h3 class="services__card-title">Música</h3>
+              <p class="services__card-description"> Me apresento tocando teclado, violão e cantando em em eventos públicos, casamentos, aniversáriose etc...</p>
             </div>
 
             <div class="services__card">
               <i class="services__card-icon fa-solid fa-pen-nib"></i>
-              <h3 class="services__card-title">Front End</h3>
-              <p class="services__card-description">Três linguagens de programação que gosto é html, css, main.js.</p>
+              <h3 class="services__card-title">Trabalhos</h3>
+              <p class="services__card-description"> Faço trabalhos escolares como redações, projetos GIT HUB, Inglês Paraná e Quizzis.</p>
             </div>
 
             <div class="services__card">
               <i class="services__card-icon fa-solid fa-mobile"></i>
-              <h3 class="services__card-title">Técnico de Informática</h3>
-              <p class="services__card-description">Trabalho com formatação, upgrade de hd para ssd entre outros serviços.</p>
+              <h3 class="services__card-title">Fotos</h3>
+              <p class="services__card-description">Tiro fotos e Faço edições de com aplicativos profissionais.</p>
+            </div>
+
+            <div class="services__card">
+              <i class="services__card-icon fa-solid fa-mobile"></i>
+              <h3 class="services__card-title">Designer</h3>
+              <p class="services__card-description">Faço artes como convites, publicidades, e divulgação de eventos.</p>
+            </div>
+
+            <div class="services__card">
+              <i class="services__card-icon fa-solid fa-mobile"></i>
+              <h3 class="services__card-title">Aulas</h3>
+              <p class="services__card-description">Posso dar aulas de Inglês, violão, redação e teclado.</p>
             </div>
           </div>
         </div>
@@ -110,23 +122,24 @@
       <section class="about" id="about">
         <div class="section__content container">
           <h2 class="section__title">Sobre mim</h2>
-          <p class="about__text">Olá, sou Rafael Assis Santos, Graduado em História Licenciatura, Pedagogia, Análise e Desenvolvimento de Sistemas, 
-          Teologia Biblíca do Novo Testamento, Especializações em Educação Especial, 
-          Educação do Campo, Metodologias do Ensino da Matemática e Tecnologia e Informação.</p>
+          <p class="about__text">Olá, Meu nome é Giovanna Bochensku Nunis, tenho 16 anos e amo cultivar várias hanilidades e hobbies, 
+            já fiz cursos de música, redação e inglês. Apesar dos cursos me considero autodidata pois muito do que sei aprendi sozinha, 
+            faço trabalhos para me tornar independente quanto antes. Sonho em cursar medicina.
+            .</p>
           <a href="#contact" class="about__btn btn">Bora conversar</a>
         </div>
       </section>
 
       <section class="proyects" id="proyects">
         <div class="section__content container">
-          <h2 class="section__title section__title--black">Projetos recentes</h2>
+          <h2 class="section__title section__title--black">Alguns dos meus trabalhos</h2>
 
           <div class="proyects__cards">
             <div class="proyects__card">
               <img src="proyect1.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
-                <h3 class="proyects__card-title">Projeto 1</h3>
-                <a href="https://github.com/professor-rafael/TrAbAlHo-SoBrE-IA"><i class="fa-brands fa-github"></i></a>
+                <h3 class="proyects__card-title">Projeto Git Hub - Programação de site</h3>
+                <a href="  "><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Trabalho sobre IA.</p>
               </div>
             </div>
