--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           <div class="services__cards">
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-code"></i>
+              <i class="micofone.png"></i>
               <h3 class="services__card-title">Música</h3>
               <p class="services__card-description"> Me apresento tocando teclado, violão e cantando em em eventos públicos, casamentos, aniversáriose etc...</p>
             </div>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-mobile"></i>
+              <i class="vintage.png"></i>
               <h3 class="services__card-title">Fotos</h3>
               <p class="services__card-description">Tiro fotos e Faço edições de com aplicativos profissionais.</p>
             </div>
@@ -114,6 +114,13 @@
               <i class="services__card-icon fa-solid fa-mobile"></i>
               <h3 class="services__card-title">Aulas</h3>
               <p class="services__card-description">Posso dar aulas de Inglês, violão, redação e teclado.</p>
+            </div>
+
+            <div class="services__card">
+              <i class="services__card-icon fa-solid fa-mobile"></i>
+              <h3 class="services__card-title">Futura intercâmbista</h3>
+              <p class="services__card-description">Embarco para Austrĺia em Julho de 2025, para viver
+                uma experiência de 5 meses graças ao Ganhando o Mundo.</p>
             </div>
           </div>
         </div>
