--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Website Giovanna-Bochenski</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="microfone.png">
+  <link rel="icon" href="olho.png">
   <link rel="stylesheet" href="responsive.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -155,7 +155,7 @@
               <img src="proyect2.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
-                <a href="https://github.com/professor-rafael/projeto_--_uva_niagara"><i class="fa-brands fa-github"></i></a>
+                <a href="https://giovannabochenski.github.io/PROJETO-DE-MUSICA/"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Web site sobre Uva Niágara.</p>
               </div>
             </div>
@@ -164,7 +164,7 @@
               <img src="proyect3.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
-                <a href="https://github.com/professor-rafael/gerador_de_senhas"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Web site sobre segurança digital.</p>
               </div>
             </div>
@@ -173,7 +173,7 @@
               <img src="proyect4.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 4</h3>
-                <a href="https://github.com/professor-rafael/Javascript-projeto-de-vida"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description"> Web-site sobre Projeto de vida.</p>
               </div>
             </div>
@@ -182,7 +182,7 @@
               <img src="proyect5.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 5</h3>
-                <a href="https://github.com/professor-rafael/FormaturaMariaHelena"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Album de fotos com html e css.</p>
               </div>
             </div>
@@ -191,7 +191,7 @@
               <img src="proyect6.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 6</h3>
-                <a href="https://github.com/professor-rafael/Efeito-Matrix"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Efeito matrix.</p>
               </div>
             </div>
