--- a/index.html
+++ b/index.html
@@ -143,20 +143,20 @@
 
           <div class="proyects__cards">
             <div class="proyects__card">
-              <img src="proyect1.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="videocasamento40seg.mp4" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
-                <h3 class="proyects__card-title">Projeto Git Hub - Programação de site</h3>
+                <h3 class="proyects__card-title">Cantando e tocando a música "Aliança" no violão</h3>
                 <a href="  "><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Trabalho sobre IA.</p>
+                <p class="proyects__card-description">Me apresentando</p>
               </div>
             </div>
 
             <div class="proyects__card">
-              <img src="proyect2.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="fotoarvore2x.mp4" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
                 <a href="https://giovannabochenski.github.io/PROJETO-DE-MUSICA/"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Web site sobre Uva Niágara.</p>
+                <p class="proyects__card-description">Projeto de Catálogo de músicas.</p>
               </div>
             </div>
 
@@ -165,7 +165,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Web site sobre segurança digital.</p>
+                <p class="proyects__card-description">2 lugar Redação campeã do núcleo Regional de Ivaiporã.</p>
               </div>
             </div>
 
@@ -174,7 +174,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 4</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description"> Web-site sobre Projeto de vida.</p>
+                <p class="proyects__card-description"> Uma das 1200 selecionadas paga o programa Ganhando o Mundo 2025.</p>
               </div>
             </div>
 
