--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
           <div class="proyects__cards">
             <div class="proyects__card">
-              <img src="videocasamento40seg.mp4" alt="image of proyect" class="proyects__card-img">
+              <img src="fotocantando2.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Cantando e tocando a música "Aliança" no violão</h3>
                 <a href="  "><i class="fa-brands fa-github"></i></a>
@@ -161,7 +161,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="proyect3.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="redação.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
@@ -170,7 +170,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="proyect4.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="intercambio.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 4</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
@@ -209,13 +209,13 @@
             <p>Os contatos abaixo é para sanar as dúvidas, sobre os meus projetos disponível no GitHub.</p>
             <div class="social-media social-media--contact">
               <div class="social-media__icon">
-                <a href="https://api.whatsapp.com/send?phone=5543996561825"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://www.whatsapp.com/?lang=pt_BR"><i class="fa-brands fa-whatsapp"></i></a>
               </div>
               <div class="social-media__icon">
-                <a href="https://www.youtube.com/channel/UCBRq6fO_-P6yPOVbC0yZVmQ"><i class="fa-brands fa-square-youtube"></i></a>
+                <a href="https://www.youtube.com/"><i class="fa-brands fa-square-youtube"></i></a>
               </div>
               <div class="social-media__icon">
-                <a href="https://github.com/professor-rafael"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
               </div>
 
               <audio controls>
@@ -242,7 +242,7 @@
 
     </main>
   <footer class="footer container">
-    <p>@rasinformatica</p>
+    <p>@_giovanna.nunis_</p>
   </footer>
 
   <script src="main.js"></script>
