--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-pen-nib"></i>
+              <i class=""></i>
               <h3 class="services__card-title">Trabalhos</h3>
               <p class="services__card-description"> Faço trabalhos escolares como redações, projetos GIT HUB, Inglês Paraná e Quizzis.</p>
             </div>
@@ -179,20 +179,20 @@
             </div>
 
             <div class="proyects__card">
-              <img src="proyect5.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="fotoceu.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 5</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Album de fotos com html e css.</p>
+                <p class="proyects__card-description">Foto tirada e editada por mim.</p>
               </div>
             </div>
 
             <div class="proyects__card">
-              <img src="proyect6.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="fotosozinhaviolão.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 6</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Efeito matrix.</p>
+                <p class="proyects__card-description">lique na foto e mem veja cantando!.</p>
               </div>
             </div>
 
