--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
               <img src="fotocantando2.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Cantando e tocando a música "Aliança" no violão</h3>
-                <a href="  "><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTc3MDQ2NDQ2Njc1NTUx?story_media_id=3558583388653288667&igsh=NDRiZm8yYTY1b3Vl
+                "><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">Me apresentando</p>
               </div>
             </div>
@@ -191,7 +192,7 @@
               <img src="fotosozinhaviolão.jpg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 6</h3>
-                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTc3MDQ2NDQ2Njc1NTUx?story_media_id=3501475544334812675&igsh=NDRiZm8yYTY1b3Vl"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">lique na foto e mem veja cantando!.</p>
               </div>
             </div>
