--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="services__card">
-              <i class=""></i>
+              <i class="vintage.png"></i>
               <h3 class="services__card-title">Trabalhos</h3>
               <p class="services__card-description"> Faço trabalhos escolares como redações, projetos GIT HUB, Inglês Paraná e Quizzis.</p>
             </div>
@@ -129,7 +129,7 @@
       <section class="about" id="about">
         <div class="section__content container">
           <h2 class="section__title">Sobre mim</h2>
-          <p class="about__text">Olá, Meu nome é Giovanna Bochensku Nunis, tenho 16 anos e amo cultivar várias hanilidades e hobbies, 
+          <p class="about__text">Olá, Meu nome é Giovanna Bochenski Nunis, tenho 16 anos e amo cultivar várias hanilidades e hobbies, 
             já fiz cursos de música, redação e inglês. Apesar dos cursos me considero autodidata pois muito do que sei aprendi sozinha, 
             faço trabalhos para me tornar independente quanto antes. Sonho em cursar medicina.
             .</p>
@@ -143,7 +143,7 @@
 
           <div class="proyects__cards">
             <div class="proyects__card">
-              <img src="fotocantando2.jpeg" alt="image of proyect" class="proyects__card-img">
+              <img src="fotoigrejacantando.jpeg" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Cantando e tocando a música "Aliança" no violão</h3>
                 <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTc3MDQ2NDQ2Njc1NTUx?story_media_id=3558583388653288667&igsh=NDRiZm8yYTY1b3Vl
@@ -153,7 +153,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="fotoarvore2x.mp4" alt="image of proyect" class="proyects__card-img">
+              <img src="passaportefav.png" alt="image of proyect" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
                 <a href="https://giovannabochenski.github.io/PROJETO-DE-MUSICA/"><i class="fa-brands fa-github"></i></a>
