--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           <div class="services__cards">
             <div class="services__card">
-              <i class="micofone.png"></i>
+              <i class="fa-solid fa-microphone-lines"></i>
               <h3 class="services__card-title">Música</h3>
               <p class="services__card-description"> Me apresento tocando teclado, violão e cantando em em eventos públicos, casamentos, aniversáriose etc...</p>
             </div>
@@ -99,7 +99,7 @@
             </div>
 
             <div class="services__card">
-              <i class="vintage.png"></i>
+              <i class="fa-solid fa-camera"></i>
               <h3 class="services__card-title">Fotos</h3>
               <p class="services__card-description">Tiro fotos e Faço edições de com aplicativos profissionais.</p>
             </div>
@@ -117,7 +117,7 @@
             </div>
 
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-mobile"></i>
+              <i class="fa-solid fa-plane"></i>
               <h3 class="services__card-title">Futura intercâmbista</h3>
               <p class="services__card-description">Embarco para Austrĺia em Julho de 2025, para viver
                 uma experiência de 5 meses graças ao Ganhando o Mundo.</p>
@@ -153,7 +153,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="passaportefav.png" alt="image of proyect" class="proyects__card-img">
+              <img src="passaportefav.png" alt="image of proyect" height="80" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
                 <a href="https://giovannabochenski.github.io/PROJETO-DE-MUSICA/"><i class="fa-brands fa-github"></i></a>
