--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="services__card">
-              <i class="vintage.png"></i>
+              <i class="fa-solid fa-pen-nib"></i>
               <h3 class="services__card-title">Trabalhos</h3>
               <p class="services__card-description"> Faço trabalhos escolares como redações, projetos GIT HUB, Inglês Paraná e Quizzis.</p>
             </div>
@@ -105,13 +105,13 @@
             </div>
 
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-mobile"></i>
+              <i class="fa-solid fa-palette"></i>
               <h3 class="services__card-title">Designer</h3>
               <p class="services__card-description">Faço artes como convites, publicidades, e divulgação de eventos.</p>
             </div>
 
             <div class="services__card">
-              <i class="services__card-icon fa-solid fa-mobile"></i>
+              <i class="fa-solid fa-book-open"></i>
               <h3 class="services__card-title">Aulas</h3>
               <p class="services__card-description">Posso dar aulas de Inglês, violão, redação e teclado.</p>
             </div>
