--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
           <div class="proyects__cards">
             <div class="proyects__card">
-              <img src="fotoigrejacantando.jpeg" alt="image of proyect" class="proyects__card-img">
+              <img src="fotoigrejacantando.jpeg" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Cantando e tocando a música "Aliança" no violão</h3>
                 <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTc3MDQ2NDQ2Njc1NTUx?story_media_id=3558583388653288667&igsh=NDRiZm8yYTY1b3Vl
@@ -153,7 +153,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="passaportefav.png" alt="image of proyect" height="80" class="proyects__card-img">
+              <img src="passaportefav.png" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 2</h3>
                 <a href="https://giovannabochenski.github.io/PROJETO-DE-MUSICA/"><i class="fa-brands fa-github"></i></a>
@@ -162,7 +162,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="redação.jpeg" alt="image of proyect" class="proyects__card-img">
+              <img src="redação.jpeg" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
@@ -171,7 +171,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="intercambio.jpeg" alt="image of proyect" class="proyects__card-img">
+              <img src="intercambio.jpeg" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 4</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
@@ -180,7 +180,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="fotoceu.jpeg" alt="image of proyect" class="proyects__card-img">
+              <img src="fotoceu.jpeg" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 5</h3>
                 <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
@@ -189,7 +189,7 @@
             </div>
 
             <div class="proyects__card">
-              <img src="fotosozinhaviolão.jpg" alt="image of proyect" class="proyects__card-img">
+              <img src="fotosozinhaviolão.jpg" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 6</h3>
                 <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTc3MDQ2NDQ2Njc1NTUx?story_media_id=3501475544334812675&igsh=NDRiZm8yYTY1b3Vl"><i class="fa-brands fa-github"></i></a>
