--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <img src="redação.jpeg" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 3</h3>
-                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/p/DB-gABXMaz3/?igsh=eHRjdGhiamhweHZ4"><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description">2 lugar Redação campeã do núcleo Regional de Ivaiporã.</p>
               </div>
             </div>
@@ -174,7 +174,7 @@
               <img src="intercambio.jpeg" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 4</h3>
-                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/p/DC0cCpPsn_n/?igsh=MTdxYWNheTNrZ2g3bg=="><i class="fa-brands fa-github"></i></a>
                 <p class="proyects__card-description"> Uma das 1200 selecionadas paga o programa Ganhando o Mundo 2025.</p>
               </div>
             </div>
@@ -183,8 +183,8 @@
               <img src="fotoceu.jpeg" alt="image of proyect" height="20" width="20" class="proyects__card-img">
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 5</h3>
-                <a href="https://github.com/giovannabochenski"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">Foto tirada e editada por mim.</p>
+                <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE4MDI2NzI2ODk5ODg0ODMw?igsh=MTVudDM1a3BxeDhnZA=="><i class="fa-brands fa-github"></i></a>
+                <p class="proyects__card-description">Fotos tirada e editada por mim.</p>
               </div>
             </div>
 
@@ -193,7 +193,7 @@
               <div class="proyects__card-info">
                 <h3 class="proyects__card-title">Projeto 6</h3>
                 <a href="https://www.instagram.com/s/aGlnaGxpZ2h0OjE3OTc3MDQ2NDQ2Njc1NTUx?story_media_id=3501475544334812675&igsh=NDRiZm8yYTY1b3Vl"><i class="fa-brands fa-github"></i></a>
-                <p class="proyects__card-description">lique na foto e mem veja cantando!.</p>
+                <p class="proyects__card-description">Clique na foto e me veja cantando!.</p>
               </div>
             </div>
 
