--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
   ::-webkit-scrollbar-track 
   {
-      background: #880404;
+      background: #060000;
   }
 
   ::-webkit-scrollbar-thumb 
   {
-      background: #4e1028;
+  background-color: #810530;
+  background: #41028;
       border-radius: 12-0px;
   }
 
